@@ -76,6 +76,24 @@ public class CassandraJavaPairRDD<K, V> extends JavaPairRDD<K, V> {
     }
 
     /**
+     * Forces the rows within a selected Cassandra partition to be returned in ascending order
+     * (if possible).
+     */
+    public CassandraJavaPairRDD<K, V> withAscOrder() {
+        CassandraRDD<Tuple2<K, V>> newRDD = rdd().withAscOrder();
+        return new CassandraJavaPairRDD<>(newRDD, kClassTag(), vClassTag());
+    }
+
+    /**
+     * Forces the rows within a selected Cassandra partition to be returned in descending order
+     * (if possible).
+     */
+    public CassandraJavaPairRDD<K, V> withDescOrder() {
+        CassandraRDD<Tuple2<K, V>> newRDD = rdd().withAscOrder();
+        return new CassandraJavaPairRDD<>(newRDD, kClassTag(), vClassTag());
+    }
+
+    /**
      * Adds the limit clause to CQL select statement. The limit will be applied for each created
      * Spark partition. In other words, unless the data are fetched from a single Cassandra partition
      * the number of results is unpredictable.
